# WM-2026-prediction-Just-for-fun-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/manual/: team_name_mapping.csv
examples/: elo_ratings_template.csv  manual_market_probs_template.csv  polymarket_market_mapping_template.csv  team_name_mapping_template.csv  worldcup_2026_schedule_template.csv
scripts/: ingest_historical_results.py  normalize_country_names.py
src/: cli.py  config.py  dashboard.py  utils.py
src/data_sources/: elo.py  historical_results.py  manual_market_probs.py  market_snapshots.py  polymarket.py  prediction_snapshots.py  schedule.py  team_mapping.py
src/markets/: __init__.py  calibration.py  classifier.py  moneyline.py  spread.py  totals.py  wdl.py
src/models/: __init__.py  backtesting.py  confidence.py  feature_engineering.py  market_blend.py  poisson_model.py  predictor.py
tests/: test_backtesting_no_leakage.py  test_elo_update.py  test_market_blend.py  test_market_classification.py  test_market_snapshots.py  test_poisson_model.py  test_polymarket_matching.py  test_prediction_snapshots.py  test_schedule_state.py  test_spread_parsing.py  test_total_parsing.py
